[package]
name = "ken"
version = "0.1.0"
edition = "2021"
description = "Durable workflow system for AI agent self-orchestration"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
